--- a/Klimaktoplan-LT/css/style.css
+++ b/Klimaktoplan-LT/css/style.css
@@ -781,7 +781,7 @@ p {
   padding: 20px;
 }
 .fifth-container .logo1 {
-  background: url(../images/icon_01_apteki_LT.jpg) no-repeat 50% / contain;
+  background: url(../images/MicrosoftTeams-image1.png) no-repeat 50% / contain;
 }
 .fifth-container .logo1,
 .fifth-container .logo2,
@@ -806,7 +806,7 @@ p {
   background-color: #f7eed1 !important;
 }
 .fifth-container .logo2 {
-  background: url(../images/button_aptek02_KZ.jpg) no-repeat 50% / contain;
+  background: url(../images/MicrosoftTeams-image2.png) no-repeat 50% / contain;
 }
 .fifth-container .logo3 {
   background: url(../images/button_aptek03_KZ.jpg) no-repeat 50% / contain;
