--- a/activeFlora/css/style.css
+++ b/activeFlora/css/style.css
@@ -115,6 +115,17 @@
 }
 
 
+.block-after {
+  color: #8b8b8b;
+    font-size: 1em;
+    display: flex;
+    padding: 40px;
+}
+.block-after_inner {
+  display: flex;
+    flex-direction: column;
+}
+
 
 
 .logo strong {
