--- a/Lazea-new/css/style.css
+++ b/Lazea-new/css/style.css
@@ -394,6 +394,15 @@ width: 165px;
   width: 800px;
 }
 
+.container-9 h3 {
+  text-align: center;
+}
+.container-10 {
+  padding: 0 20px; 
+  font-size: 12px;
+line-height: 18px;
+}
+
 
 
 
@@ -807,7 +816,7 @@ div {
   width: 45px;
   height: 45px;
   z-index: 15;
-  background: url('../images/Union.svg') no-repeat center / contain;
+  background: url('../images/inst.svg') no-repeat center / contain;
 }
 
 
@@ -866,9 +875,112 @@ div {
     margin: 40px 0;
   }
 
+  .container-1_mob {
+    display: none;
+    margin-top: 60px;
+  }
+  .container-1_mob .container-1_logo {
+    margin: auto;
+  }
+  .container-1_mob p {
+    text-align: center;
+    margin: 20px 0;
+  }
+  .container-1_mob span {
+    margin: 0 20px;
+    color: white;
+    line-height: 48px;
+    background-color: #4E1F75;
+    padding: 3px;
+  }
+  .container-1_mob-img {
+    width: 100%;
+    height: 250px;
+    background: url(../images/div_photo.jpg) no-repeat center/contain;
+  }
+
 
 @media screen and (max-width: 1024px) {
+  h3 {
+    padding: 0 20px;
+  }
+  h2 {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .container-1 {
+    display: none;
+  }
+  .container-1_mob {
+    display: block;
+  }
+  .container-4_img::before {
+    left: 0;
+  }
+  .container-8::before {
+    top: -60px;
+  }
+  .container-8_inner h3 {
+    padding-top: 50px;
+  }
+  .container-8_inner {
+    padding: 0 20px;
+  }
+  .container-8_text p {
+    width: 100%;
+  }
+  .container-4_img {
+    background-position: 85% !important;
+  }
+  .container-6_img {
+    background-position: 85% !important;
+  }
+  .opa-num {
+    display: none;
+  }
+  .container-4_num {
+    padding: 0 20px;
+  }
+  .container-3 {
+    flex-direction: column-reverse;
+  }
+  .container-3_img::before {
+    top: -60px;
+    right: 0;
+  }
+  .container-4 p {
+    padding: 20px;
+  }
 
+  .container-3_img {
+    width: 100%;
+    background-position: center;
+    background-size: 200%;
+  }
+.container-2_images {
+  padding: 0px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+  .container-2_img-container {
+    width: 150px;
+  }
+  .container-2_text {
+    width: 100%;
+  }
+  .container-2 {
+    padding: 20px;
+  }
+  .navigation-menu {
+    display: none;
+  }
+.container-7_images {
+  flex-wrap: wrap;
+  align-items: center;
+}
+  .container-7_img-container {
+    width: 150px;
+  }
 
 
 .vft {
