--- a/Vitango-new/css/style.css
+++ b/Vitango-new/css/style.css
@@ -1933,7 +1933,7 @@ color: #282725;
     background: url(../images/div_01_label2-ru.svg) no-repeat center/contain !important;
 
   }
-  .container-mob_img-ru {
+  .container6-mob_img-ru {
     background: url(../images/div_01_label3-ru.svg) no-repeat center/contain !important;
     
   }
