--- a/Vitango-new/css/style.css
+++ b/Vitango-new/css/style.css
@@ -1919,7 +1919,7 @@ color: #282725;
   }
   #menuToggle {
     position: absolute !important;
-    left: 24% !important;
+    left: 87vw !important;
     top: 20px !important;
   }
   .container5-plates {
