--- a/activeFlora/css/style.css
+++ b/activeFlora/css/style.css
@@ -66,7 +66,7 @@ h4 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 600px;
+  max-width: 800px;
 }
 
 .accordion {
@@ -309,6 +309,7 @@ html {
   align-items: center;
   justify-content: space-between;
   z-index: 8 !important;
+  box-shadow: rgb(0 0 0) 0px 1px 10px -2px;
 }
 .navigation-logo .instruction {
   position: fixed;
@@ -613,15 +614,16 @@ html {
 }
 .doses ul li p {
   text-align: center;
-  font-size: 20px;
   font-weight: 700;
-  line-height: 32px;
   color: #00b0f0;
+  text-align: center;
+    font-size: 22px;
+    line-height: 28px;
 }
 .doses ul li p span {
   font-weight: lighter;
-  font-size: 18px;
-  line-height: 22px;
+  font-size: 22px;
+    line-height: 28px;
   color: #8b8b8b;
 }
 .doses ul li div {
