--- a/Lazea-new/css/style.css
+++ b/Lazea-new/css/style.css
@@ -497,7 +497,7 @@ width: 165px;
   text-align: center;
 }
 .container-10 {
-  padding: 0 20px; 
+  padding: 50px 70px; 
   font-size: 12px;
 line-height: 18px;
 }
