--- a/AlpeKid/css/style.css
+++ b/AlpeKid/css/style.css
@@ -474,13 +474,14 @@ color: #00A79D;
 
 .accordion {
   cursor: pointer;
-  padding: 20px 0 !important;
+  padding: 30px 0 !important;
   background-color: white;
   outline: none;
   font-size: 20px;
   transition: 0.5s;
   font-family: 'MM';
   font-weight: lighter;
+  color: #5F5C58;
 }
 
 
@@ -506,7 +507,7 @@ color: #00A79D;
   background: url("../images/button.svg") no-repeat center/contain;
   width: 30px;
   height: 30px;
-  color: black;
+  color: #5F5C58;
   font-size: 18px;
   font-weight: bold;
   float: right;
@@ -782,7 +783,6 @@ color: #00A79D;
   padding: 30px 0; 
   line-height: 30px;
   font-size: 18px;
-  text-indent: 20px;
 }
 
 .panel p b {
