--- a/AlpeKid/css/style.css
+++ b/AlpeKid/css/style.css
@@ -544,7 +544,7 @@ color: #00A79D;
   background: url("../images/map 1.jpg") no-repeat center/contain;
   margin: auto;
   height: 400px;
-  width: 80%;
+  width: 100%;
 }
 
 
@@ -826,8 +826,13 @@ button:focus {
 
 
 .map-container {
-  width: 1024px;
+  width: 900px;
   margin: auto;
+margin-bottom: 50px;
+  
+}
+.map-container p {
+font-family: 'RR';
 }
 
 .where-to-buy-mob {
