--- a/AlpeKid/css/style.css
+++ b/AlpeKid/css/style.css
@@ -673,6 +673,7 @@ color: #00A79D;
   justify-content: flex-end;
   height: 50px;
   top: 0;
+      box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
     /*-webkit-box-shadow: -1px 2px 5px 0px rgba(150,150,150,1);*/
     /*-moz-box-shadow: -1px 2px 5px 0px rgba(150,150,150,1);*/
     /*box-shadow: -1px 2px 5px 0px rgba(150,150,150,1);*/
