--- a/AlpeKid/css/style.css
+++ b/AlpeKid/css/style.css
@@ -1353,6 +1353,7 @@ ol {
     line-height: 36px;
     color: #F57416;
     margin-left: 100px;
+    margin-top: 30px;
   }
   .mob-mid .header-dragon_dragon {
     width: 170px;
