--- a/activeFlora/css/style.css
+++ b/activeFlora/css/style.css
@@ -405,6 +405,7 @@ html {
   margin: 3% 0;
   display: flex;
   flex-direction: column;
+      padding-right: 20px;
 }
 .header-container .text-block div {
   display: flex;
