--- a/Congress/css/style.css
+++ b/Congress/css/style.css
@@ -591,19 +591,35 @@ textarea {
   width: 315px;
   height: 380px;
   margin-right: 10px;
-  background: url('../images/Group 4.png') no-repeat center/contain;
+  background: url('../images/Rectangle 90.jpg') no-repeat center/contain;
 }
 .partners-plate-link2 {
   width: 315px;
   height: 380px;
   margin-right: 10px;
-  background: url('../images/Group 28.png') no-repeat center/contain;
+  background: url('../images/Rectangle 89.jpg') no-repeat center/contain;
 }
 .partners-plate-link3 {
   width: 315px;
   height: 380px;
   margin-right: 0px;
-  background: url('../images/Group 25.png') no-repeat center/contain;
+  background: url('../images/Rectangle 90-2.jpg') no-repeat center/contain;
+}
+
+.partners-plate_blue-text {
+  background: #2F80ED;
+    mix-blend-mode: multiply;
+    color: white;
+    font-family: 'MM';
+    height: 76px;
+    font-size: 22px;
+    line-height: 26px;
+    align-items: center;
+    display: flex;
+    /*justify-content: center;*/
+    padding-left: 20px;
+    position: relative;
+    top: 70%;
 }
 
 .partners-container-links {
@@ -655,8 +671,59 @@ textarea {
   background: url('../images/Rectangle 149.jpg') no-repeat center/contain;
 }
 
-.people_block-1:nth-child(2) .people_plate_img {
+/*.people_block-1:nth-child(2) .people_plate_img {
   background: url('../images/Rectangle 147.jpg') no-repeat center/contain;
+}*/
+
+/*
+.slider-text {
+  position: relative;
+  width: 60%;
+  height: 600px;
+}*/
+
+.slider-text_blue {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #2F80ED;
+    mix-blend-mode: multiply;
+}
+
+.slider-text_conf {
+  width: 50%;
+    height: 520px;
+    left: 0%;
+    margin-left: -80px;
+    top: 60px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+}
+
+.slider__item .slider-text_conf p {
+  color: white;
+      z-index: 1;
+      padding:0 40px;
+      padding-left: 70px;
+      margin-bottom: 10px;
+      text-align: left;
+}
+
+.slider__item .slider-text_conf p::before {
+  content: '.';
+  position: absolute;
+  left: 35px;
+  margin-top: -30px;
+  z-index: 1;
+  font-size: 100px;
+  color: white;
+  display: block;
+  opacity: 0.2;
+  height: 10px;
+  width: 10px;
 }
 
 
@@ -737,6 +804,7 @@ font-family: 'MM';
     text-transform: uppercase;
     max-width: 990px;
     margin: auto;
+    margin-bottom: 60px;
 }
 
 .extra-text {
@@ -940,6 +1008,21 @@ color: #333333;
 }
 
 
+.slider-container_blue {
+  display: flex;
+  height: 600px;
+  margin-top: 60px;
+}
+
+
+.slider-outer-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 950px;
+    margin: auto;
+}
+
+
 /*accordion*/
 
 
@@ -980,6 +1063,8 @@ color: #333333;
 .acc-flex {
   display: flex;
   font-size: 15px;
+  line-height: 30px;
+  margin-bottom: 60px;
 }
 
 .acc-flex p {
@@ -1067,10 +1152,12 @@ color: #333333;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease-out;
-  font-family: 'HNC', sans-serif;
+  font-size: 18px;
+    line-height: 26px;
+    font-family: 'MR';
 }
 
-.panel__checklist p::before {
+/*.panel__checklist p::before {
   content: '✓';
   margin-right: 10px;
 }
@@ -1084,9 +1171,9 @@ color: #333333;
   color: green;
   font-weight: bold;
   font-size: 27px !important;
-}
+}*/
 
-.panel p {
+/*.panel p {
   text-align: left;
   font-size: 18px;
     line-height: 26px;
@@ -1097,12 +1184,12 @@ color: #333333;
 
 .panel__sub p {
   font-size: 15px;
-}
+}*/
 
-.panel b {
+/*.panel b {
   color: #a00067;
   font-family: 'RR';
-}
+}*/
 
 .panel-after {
   font-size: 15px;
@@ -1543,7 +1630,7 @@ color: #000000;
     line-height: 46px;
     text-transform: uppercase;
     max-width: 990px;
-    margin: auto;
+    /*margin: auto;*/
 }
 .slider__item h2 b {
   font-family: 'MB'
@@ -1574,13 +1661,13 @@ color: #000000;
 }
 
 .slider__control_left {
-  top: 530px;
+  top: 750px;
     left: 28%;
 }
 
 .slider__control_right {
-  right: 840px;
-  top: 530px;
+  right: 60%;
+  top: 750px;
 
 }
 
@@ -1616,9 +1703,9 @@ color: #000000;
 }
 
 .slider-img-1 {
-  width: 100%;
-  height: 600px;
-  background: url("../images/MicrosoftTeams-image (4).png")no-repeat center/contain;
+  width: 520px;
+  height: 500px;
+  background: url("../images/Rectangle 32-2.jpg")no-repeat center/contain;
 }
 .slider-img-2 {
   width: 100%;
@@ -1766,7 +1853,7 @@ color: #000000;
 .slider__item>div {
   line-height: 250px;
   font-size: 100px;
-  text-align: center;
+  text-align: left;
 }
 
 
@@ -2496,7 +2583,8 @@ button {
     line-height: 46px;
     text-transform: uppercase;
     max-width: 990px;
-    margin: auto;
+    text-align: left;
+    /*margin: auto;*/
   }
   .plate_styling-empty {
     display: none;
