--- a/Congress/css/style.css
+++ b/Congress/css/style.css
@@ -1074,6 +1074,23 @@ color: #333333;
 }
 
 
+.people_plate_img_ant {
+  background: url('../images/Rectangle 147.jpg') no-repeat center/contain;
+}
+
+.people_plate_img_kuch {
+  background: url('../images/Rectangle-1-2.jpg') no-repeat center/contain;
+
+}
+.people_plate_img_volo {
+  background: url('../images/Rectangle 148.jpg') no-repeat center/contain;
+
+}
+.people_plate_img_mit {
+  background: url('../images/Rectangle 149-3.jpg') no-repeat center/contain;
+
+}
+
 .popup-btn_blue::before {
   content: '';
   position: absolute;
@@ -1710,14 +1727,14 @@ color: #000000;
   background: url("../images/Rectangle 32-2.jpg")no-repeat center/contain;
 }
 .slider-img-2 {
-  width: 100%;
-  height: 600px;
-  background: url("../images/MicrosoftTeams-image (5).png")no-repeat center/contain;
+  width: 520px;
+  height: 500px;
+  background: url("../images/i-2.png")no-repeat center/contain;
 }
 .slider-img-3 {
-  width: 100%;
-  height: 600px;
-  background: url("../images/MicrosoftTeams-image (6).png")no-repeat center/contain;
+  width: 520px;
+  height: 500px;
+  background: url("../images/i-3.png")no-repeat center/contain;
 }
 .slider-img-4 {
   width: 100%;
