--- a/Congress/css/style.css
+++ b/Congress/css/style.css
@@ -628,8 +628,12 @@ textarea {
 
 
 .people {
-  padding-bottom: 60px;
+  /*padding-bottom: 60px;*/
     padding-top: 120px;
+}
+
+.people-time {
+  padding: 60px 0 0;
 }
 
 .people-inner {
@@ -650,6 +654,7 @@ textarea {
 .people_block-1 {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 100px;
 }
 
 .people_plate {
@@ -728,7 +733,7 @@ textarea {
 
 
 .people_block-1-dates {
-  padding: 120px 0;
+  padding: 60px 0;
   display: flex;
   justify-content: space-between; 
 }
@@ -743,6 +748,8 @@ padding-left: 40px;
 
 .people_block-1-time b {
   font-family: 'MB';
+  display: block;
+    margin-bottom: -20px;
 }
 
 .people_block-1-time p {
@@ -758,10 +765,20 @@ color: #000000;
 font-family: 'MM';
 }
 
+.people_block-1-date p::before {
+  content: '';
+    position: absolute;
+    left: 150px;
+    display: block;
+    background-color: #2F80ED;
+    height: 7%;
+    width: 2px;
+}
+
 .extra {
   position: absolute !important;
   left: 35%;
-  margin-top: -65px;
+  margin-top: -45px;
 }
 .people_block-1-dates {
   border-bottom: 1px solid #828282;
@@ -815,6 +832,16 @@ line-height: 25px;
     max-width: 990px;
     margin-top: 150px;
     margin-bottom: 60px;
+}
+
+.extra-text::before {
+  content: '';
+    position: absolute;
+    left: 150px;
+    display: block;
+    background-color: #2F80ED;
+    height: 5%;
+    width: 2px;
 }
 
 
@@ -1618,7 +1645,7 @@ h3 b {
 }
 
 .slider {
-  margin: 120px 0;
+  margin: 100px 0 120px;
   position: relative;
   overflow: hidden;
 }
