--- a/Congress/css/style.css
+++ b/Congress/css/style.css
@@ -1175,9 +1175,9 @@ line-height: 26px;
   transition: 0.5s;
 }
 
-.accordion:hover::after {
+/*.accordion:hover::after {
   background: url("../images/hover_button_plus.svg") no-repeat center/contain;
-}
+}*/
 
 
 .factors-mob {
@@ -1196,7 +1196,7 @@ line-height: 26px;
 
 .active-acc:after {
   transition: 0.5s;
-  transform: rotate(45deg);
+  transform: rotate(270deg) !important;
 }
 
 
@@ -1275,6 +1275,7 @@ line-height: 26px;
   background: url('../images/Vector 3.svg') no-repeat center/contain;
   height: 14px;
   width: 8px;
+  transform: rotate(90deg);
 }
 
 .more-photo {
