front v0.3.3 logs selection and marking added

--- a/Congress/css/style.css
+++ b/Congress/css/style.css
@@ -1199,6 +1199,13 @@ line-height: 26px;
   transform: rotate(270deg) !important;
 }
 
+.more-2 {
+  margin-top: 40px;
+    color: #2A6BC4;
+    position: relative;
+  margin-bottom: 60px;
+}
+
 
 
 .active-nav {
