front v0.3.3 logs selection and marking added

--- a/Congress/css/style.css
+++ b/Congress/css/style.css
@@ -1141,7 +1141,7 @@ color: #333333;
   left: -30px;
   display: block;
   background-color: #2F80ED;
-  height: 55%;
+  height: 120px;
   /*margin-top: 25px;*/
   /*margin-bottom: 60px;*/
   width: 2px;
