--- a/Congress/css/style.css
+++ b/Congress/css/style.css
@@ -2532,9 +2532,10 @@ button {
 }
 
 
-.accordion-container h2 {
+.accordion-container a {
   color: #2F80ED;
     font-family: 'MB';
+    display: block;
     font-size: 38px;
     line-height: 46px;
     text-transform: uppercase;
@@ -2544,7 +2545,7 @@ button {
     position: relative;
 }
 
-.accordion-container h2::after {
+.accordion-container a::after {
   content: '';
     position: absolute;
     left: 460px;
@@ -2554,10 +2555,74 @@ button {
     height: 30px;
     width: 30px;
 }
+.mob-container-slider {
+  display: none;
+}
+
+.mob-container_inner-slider {
+  padding: 20px;
+}
+
+.mob-container_inner-slider h2 {
+  color: #2F80ED;
+    font-family: 'MB';
+    font-size: 38px;
+    line-height: 46px;
+    text-transform: uppercase;
+    max-width: 990px;
+}
+
+.mob-container_inner-slider p {
+    font-family: 'MB';
+    margin-bottom: 40px;
+}
+
+.mob-text_conf p {
+  color: white;
+    z-index: 1;
+    padding: 0 40px;
+    padding-left: 70px;
+    margin-bottom: 10px;
+    text-align: left;
+}
+
+.mob-text_conf p::before {
+    content: '.';
+    position: absolute;
+    left: 35px;
+    margin-top: -30px;
+    z-index: 1;
+    font-size: 100px;
+    color: white;
+    display: block;
+    height: 10px;
+    width: 10px;
+}
+
+.mob-text_blue {
+  position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #2F80ED;
+    mix-blend-mode: multiply;
+}
+
+.mob-text_conf {
+  position: relative;
+}
+
+.mob-img-1 {
+
+}
+
+
 
 
 @media screen and (max-width: 1024px) {
-  .accordion-container h2::after {
+  .mob-container-slider {
+    display: flex;
+  }
+  .accordion-container a::after {
     display: none;
   }
   .photo-inner {
