--- a/Congress/css/style.css
+++ b/Congress/css/style.css
@@ -2580,7 +2580,7 @@ button {
 .mob-text_conf p {
   color: white;
     z-index: 1;
-    padding: 0 40px;
+    padding: 15px 20px;
     padding-left: 70px;
     margin-bottom: 10px;
     text-align: left;
@@ -2592,7 +2592,7 @@ button {
     left: 35px;
     margin-top: -30px;
     z-index: 1;
-    font-size: 100px;
+    font-size: 50px;
     color: white;
     display: block;
     height: 10px;
@@ -2608,11 +2608,24 @@ button {
 }
 
 .mob-text_conf {
-  position: relative;
+    left: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
 }
 
 .mob-img-1 {
+  width: 100%;
+  height: 300px;
+  background: url('../images/Rectangle 32-2.jpg')no-repeat center/cover;
+}
 
+.mob-img-2 {
+  background: url('../images/i-2.png')no-repeat center/cover;
+}
+.mob-img-3 {
+  background: url('../images/i-3.png')no-repeat center/cover;
 }
 
 
@@ -2621,6 +2634,7 @@ button {
 @media screen and (max-width: 1024px) {
   .mob-container-slider {
     display: flex;
+    flex-direction: column;
   }
   .accordion-container a::after {
     display: none;
