--- a/Congress/css/style.css
+++ b/Congress/css/style.css
@@ -259,7 +259,7 @@ div {
 
 .where-to-buy {
   margin-right: 60px !important;
-  margin-left: 60px !important;
+  /*margin-left: 60px !important;*/
   font-size: 10px !important;
   line-height: 10px !important;
   font-family: 'MB' !important;
