--- a/Congress/css/style.css
+++ b/Congress/css/style.css
@@ -1879,7 +1879,7 @@ color: #000000;
   width: 100%;
   height: 440px;
   margin-top: 80px;
-  background: url('../images/Rectangle 32.jpg')no-repeat 70%/cover; 
+  background: url('../images/i-50.png')no-repeat 70%/cover; 
 }
 .static-main-img_manifest {
   background: url('../images/Rectangle 31 (5).jpg')no-repeat center/contain; 
